[Anno App] Fixed horizontal scrolling issue of detail page

--- a/anno_app/www/anno/pages/community/css/style.css
+++ b/anno_app/www/anno/pages/community/css/style.css
@@ -528,7 +528,7 @@
 
 .appNameDetail
 {
-    width: 100%;
+    /*width: 100%;*/
     height: 24px;
     padding-bottom: 8px;
 }
